# BSPRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
appfw/: CMakeLists.txt  README.md
appfw/cmake/: platform_info.cmake
appfw/include/appfw/: init.h  timer.h  utils.h
appfw/include/appfw/console/: con_item.h  console_system.h  std_console.h
appfw/include/appfw/log/: base_logger.h
appfw/src/: this_module_info.h
appfw/src/console/: con_item.cpp  std_console.cpp
appfw/src/log/: base_logger.cpp  console_logger.cpp
bsp/: CMakeLists.txt
bsp/include/bsp/: base_lump.h  bsp_types.h  edges_lump.h  faces_lump.h  leaves_lump.h  level.h  nodes_lump.h  planes_lump.h  surfedges_lump.h  vertices_lump.h
bsp/src/: edges_lump.cpp  faces_lump.cpp  leaves_lump.cpp  level.cpp  nodes_lump.cpp  planes_lump.cpp  surfedges_lump.cpp  this_module_info.h  vertices_lump.cpp
bspviewer/: CMakeLists.txt
bspviewer/src/: app.cpp  app.h  demo.cpp  demo.h  font_renderer.cpp  font_renderer.h  main.cpp  this_module_info.h
src/app_base/: CMakeLists.txt
src/app_base/include/app_base/: app_base.h  app_component.h  app_config.h  bitmap.h  components.h  lightmap.h  texture_block.h  yaml.h
src/app_base/src/: app_base.cpp  app_component.cpp  app_config.cpp  components.cpp  texture_block.cpp  this_module_info.h
src/app_console_launcher/: CMakeLists.txt
src/app_console_launcher/src/: main.cpp
src/app_gui_launcher/: CMakeLists.txt
src/app_gui_launcher/src/: main.cpp
src/bsp/: CMakeLists.txt  README.md
src/bsp/include/bsp/: bsp_types.h  entity_key_values.h  level.h  sprite.h  utils.h  wad_file.h  wad_texture.h
src/bsp/src/: entity_key_values.cpp  level.cpp  sprite.cpp  this_module_info.h  wad_file.cpp  wad_texture.cpp
src/bspviewer/: CMakeLists.txt  README.md
src/bspviewer/src/: app.cpp  app.h  base_entity.cpp  base_entity.h  brush_model.cpp  brush_model.h  bsp_tree.cpp  bsp_tree.h  bspviewer.cpp  bspviewer.h  demo.h  dev_console_dialog.cpp  dev_console_dialog.h  editor_mode.cpp  editor_mode.h  editor_tool.cpp  editor_tool.h  input_system.cpp  level_loader.cpp  level_loader.h  main_view.cpp  main_view.h  main_view_renderer.cpp  main_view_renderer.h  renderer.cpp  renderer.h  trigger_entity.cpp  trigger_entity.h  vis.cpp  vis.h  world_state.cpp  world_state.h
src/bspviewer/src/assets/: asset.cpp  asset.h  asset_future.h  asset_manager.cpp  asset_manager.h  level_asset.cpp  level_asset.h  wad_asset.cpp  wad_asset.h  wad_material_asset.cpp  wad_material_asset.h
src/bspviewer/src/entities/: base_entity.cpp  base_entity.h  light_entity.cpp  player_start_entity.cpp  trigger_entity.cpp  (+1 more)
src/graphics/: CMakeLists.txt
src/graphics/src/: framebuffer.cpp  gpu_buffer.cpp  graphics_stack.cpp  render_buffer.cpp  shader_program.cpp  shader_stage.cpp  texture.cpp  texture2d.cpp  texture2d_array.cpp  texture_cube.cpp
src/graphics_test/: CMakeLists.txt
src/graphics_test/src/: graphics_test_app.cpp  graphics_test_app.h
src/gui_app/: CMakeLists.txt
src/gui_app/src/: app_config.cpp  base_view.cpp  base_view_2d.cpp  dev_console_dialog.cpp  dev_console_overlay.cpp  gui_app_base.cpp  input_system.cpp  main.cpp  profiler_dialog.cpp  this_module_info.h  utils.cpp
src/gui_app_base/: CMakeLists.txt
src/gui_app_base/src/: base_view.cpp  base_view_2d.cpp  config_component.cpp  config_item.cpp  dev_console_dialog.cpp  dev_console_dialog.h  dev_console_overlay.cpp  gui_app.manifest  gui_app_base.cpp  gui_components.cpp  input_system.cpp  main.cpp  opengl_context.cpp  profiler_dialog.cpp  utils.cpp
src/hlviewer/: CMakeLists.txt
src/hlviewer/src/: dialog_base.cpp  dialog_base.h  error_dialog.cpp  error_dialog.h  file_browser.cpp  file_browser.h  hlviewer.cpp  hlviewer.h  map_viewer.cpp  map_viewer.h  sprite_analyzer.cpp  sprite_analyzer.h  sprite_viewer.cpp  sprite_viewer.h
src/hlviewer_shared/: CMakeLists.txt
src/hlviewer_shared/src/: brush_model.cpp  scene_view.cpp  vis.cpp  world_state_base.cpp
src/imgui_impl/: CMakeLists.txt
src/imgui_impl/include/: imgui_impl_opengl3.h  imgui_impl_sdl.h  imgui_impl_shaders.h
src/imgui_impl/src/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
src/input_system/: CMakeLists.txt
src/input_system/src/: input_system.cpp  key_bind.cpp
src/material_props/: CMakeLists.txt
src/material_props/src/: base_material_props.cpp  material_prop_loader.cpp  material_props.cpp  sound_materials.cpp
src/material_system/: CMakeLists.txt
src/material_system/src/: material.cpp  material_system.cpp  shader.cpp  shader_definitions.cpp  shader_instance.cpp  shader_uniform.cpp
src/playground/: CMakeLists.txt
src/playground/src/: bmplib.hpp  main.cpp  this_module_info.h
src/rad/: CMakeLists.txt
src/rad/src/: anorms.h  bouncer.cpp  bouncer.h  bsp_tree.cpp  bsp_tree.h  coords.h  filters.h  level_config.cpp  lightmap_writer.cpp  lightmap_writer.h  main.cpp  main.h  material.cpp  material.h  patch_divider.cpp  patch_divider.h  patch_list.cpp  patch_list.h  patch_tree.cpp  patch_tree.h  patches.cpp  patches.h  plat.h  plat_win.cpp  rad_config.cpp  rad_sim.cpp  rad_sim_impl.cpp  rad_sim_impl.h  sparse_vismat.cpp  sparse_vismat.h  surface.cpp  this_module_info.h  types.h  utils.cpp  utils.h  vflist.cpp  vflist.h  vis.cpp  vis.h  vismat.cpp  (+1 more)
src/rad_launcher/: CMakeLists.txt
src/rad_launcher/src/: main.cpp  this_module_info.h
src/renderer/: CMakeLists.txt  README.md
src/renderer/src/: base_renderer.cpp  base_shader.cpp  brush_renderer.cpp  brush_renderer.h  bsp_lightmap.cpp  bsp_lightmap.h  custom_lightmap.cpp  custom_lightmap.h  envmap.cpp  fake_lightmap.cpp  fake_lightmap.h  gpu_managed_objects.cpp  gpu_resource_manager.cpp  lightmap_iface.h  material_manager.cpp  polygon_renderer.cpp  raii.cpp  scene_renderer.cpp  scene_shaders.h  shader_definitions.cpp  shader_manager.cpp  sprite_renderer.cpp  sprite_renderer.h  surface_renderer.cpp  texture_block.cpp  textured_renderer.cpp  time_smoother.cpp  world_renderer.cpp  world_renderer.h
src/stb/: CMakeLists.txt
src/stb/include/: stb_include.h
src/stb/src/: stb_image.cpp  stb_include.cpp
(+268 files in other folders)
